--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ahmeed2m.github.io/cipher",
   "dependencies": {
+    "antd": "^3.24.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
@@ -10,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
